fixing nav on tablet-sized devices

--- a/css/bootstrap.navbar.css
+++ b/css/bootstrap.navbar.css
@@ -43,3 +43,10 @@ li.nav-box {
     float: left;
   }
 }
+/* #navbarsExample09.navbar-collapse.collapse {
+  display: flex !important;
+} */
+/* 
+.collapse:not(.show) {
+  display: none;
+} */
